# TTK4900_Masteroppgave

./: .gitignore  README.md
PCBs/: readme.md
PCBs/BOM/: bogie.csv  hand.csv  hand_B.csv  imu.csv  rail.csv  shoulder.csv  torso.csv
PCBs/bogie/: bogie.kicad_pcb  bogie.kicad_pro  bogie.kicad_sch  fp-lib-table  sym-lib-table
PCBs/hand/: BOM_hand.csv  IMU_assy.kicad_sch  Low_voltage_assy.kicad_sch  can_assy.kicad_sch  fp-lib-table  hand.kicad_pcb  hand.kicad_pro  hand.kicad_sch  motor_assy.kicad_sch  opt_assy.kicad_sch  osc_boo_assy.kicad_sch  osc_rst_assy.kicad_sch  sym-lib-table
PCBs/hand_B/: fp-lib-table  hand_B.kicad_pcb  hand_B.kicad_pro  hand_B.kicad_sch  sym-lib-table
PCBs/imu/: fp-lib-table  imu.kicad_pcb  imu.kicad_pro  imu.kicad_sch  sym-lib-table
PCBs/rail/: fp-lib-table  rail.kicad_pcb  rail.kicad_pro  rail.kicad_sch  sym-lib-table
PCBs/shoulder/: can_assy.kicad_sch  fp-lib-table  imu_assy.kicad_sch  low_voltage_assy.kicad_sch  motor_assy.kicad_sch  osc_rst_assy.kicad_sch  osc_rst_boot_assy.kicad_sch  shoulder.kicad_pcb  shoulder.kicad_pro  shoulder.kicad_sch  sym-lib-table  usb_assy.kicad_sch
PCBs/torso/: can_assy.kicad_sch  fp-lib-table  imu_assy.kicad_sch  low_voltage_assy.kicad_sch  motor_assy.kicad_sch  (+7 more)
code/: readme.md
code/ros/src/control_listener/: CMakeLists.txt  package.xml
code/ros/src/control_listener/src/: control_listener.cpp  hmi.cpp  serial_comms.cpp
documentation_external/: readme.md
documentation_internal/: bom_combined.ods  journal.md  motor_notes  mouser_order_31289313.xls  readme.md  stm_config_official.txt
(+461 files in other folders)
